chore: initial version
initial version

--- a/.env
+++ b/.env
@@ -2,9 +2,18 @@ AWS_ACCESS_KEY_ID=admin
 AWS_SECRET_ACCESS_KEY=sample_key
 AWS_REGION=us-east-1
 AWS_BUCKET_NAME=mlflow
-MYSQL_DATABASE=mlflow
-MYSQL_USER=mlflow_user
-MYSQL_PASSWORD=mlflow_password
-MYSQL_ROOT_PASSWORD=toor
-MLFLOW_S3_ENDPOINT_URL=http://localhost:9000
-MLFLOW_TRACKING_URI=http://localhost:5000
+DB_NAME=mlflow
+DB_USER=mlflow_user
+DB_PW=mlflow_password
+DB_HOST=db
+DB_PORT=5432
+DB_TYPE=postgresql
+MLFLOW_PORT=5001
+MINIO_EXTERNAL_PORT=9000
+MINIO_INTERNAL_PORT=9000
+MINIO_EXTERNAL_CONSOLE_PORT=9001
+MINIO_INTERNAL_CONSOLE_PORT=9001
+MLFLOW_SERVER_S3_ENDPOINT_URL=http://s3:${MINIO_INTERNAL_PORT}
+MLFLOW_S3_ENDPOINT_URL=http://localhost:${MINIO_EXTERNAL_PORT}
+MLFLOW_TRACKING_URI=http://localhost:${MLFLOW_PORT}
+
