--- a/mlflow/Dockerfile
+++ b/mlflow/Dockerfile
@@ -1,6 +1,6 @@
 FROM continuumio/miniconda3:latest
 
-RUN pip install mlflow boto3 pymysql
+RUN pip install mlflow==1.30.0 psycopg2-binary pymysql boto3
 
 ADD . /app
 WORKDIR /app
