--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,34 +2,40 @@ version: "3.9"
 services:
   s3:
     image: minio/minio:RELEASE.2021-11-24T23-19-33Z
+    #image: minio/minio:RELEASE.2022-11-11T03-44-20Z
     restart: unless-stopped
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - "${MINIO_EXTERNAL_PORT}:${MINIO_INTERNAL_PORT}"
+      - "${MINIO_EXTERNAL_CONSOLE_PORT}:${MINIO_INTERNAL_CONSOLE_PORT}"
     environment:
       - MINIO_ROOT_USER=${AWS_ACCESS_KEY_ID}
       - MINIO_ROOT_PASSWORD=${AWS_SECRET_ACCESS_KEY}
-    command: server /data --console-address ":9001"
+    command: server /data --console-address ":${MINIO_INTERNAL_CONSOLE_PORT}"
     networks:
       - internal
       - public
     volumes:
       - minio_volume:/data
+    env_file:
+      - .env
   db:
-    image: mysql/mysql-server:5.7.28
-    restart: unless-stopped
+    restart: always
+    image: postgres:latest
     container_name: mlflow_db
     expose:
-      - "3306"
-    environment:
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-    volumes:
-      - db_volume:/var/lib/mysql
+      - ${DB_PORT}
     networks:
       - internal
+    environment:
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PW}
+    ports:
+      - '${DB_PORT}:${DB_PORT}'
+    volumes:
+      - db_volume:/var/lib/postgresql/data
+    env_file:
+      - .env
   mlflow:
     container_name: tracker_mlflow
     image: tracker_ml
@@ -38,36 +44,50 @@ services:
       context: ./mlflow
       dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "${MLFLOW_PORT}:${MLFLOW_PORT}"
     environment:
+      - BACKEND=${DB_TYPE}://${DB_USER}:${DB_PW}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+      - ARTIFACTS=s3://${AWS_BUCKET_NAME}/
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_DEFAULT_REGION=${AWS_REGION}
-      - MLFLOW_S3_ENDPOINT_URL=http://s3:9000
+      - MLFLOW_S3_ENDPOINT_URL=${MLFLOW_SERVER_S3_ENDPOINT_URL}
     networks:
       - public
       - internal
-    entrypoint: mlflow server --backend-store-uri mysql+pymysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE} --default-artifact-root s3://${AWS_BUCKET_NAME}/ --artifacts-destination s3://${AWS_BUCKET_NAME}/ -h 0.0.0.0
+    command:
+      - sh    # (sh allows for var substitution of BACKEND and ARTIFACTS)
+      - -c
+      - mlflow server
+        --port ${MLFLOW_PORT}
+        --host 0.0.0.0
+        --backend-store-uri $${BACKEND}
+        --default-artifact-root $${ARTIFACTS}
+        --artifacts-destination $${ARTIFACTS}
     depends_on:
       wait-for-db:
         condition: service_completed_successfully
+    env_file:
+      - .env
   create_s3_buckets:
     image: minio/mc
     depends_on:
       - "s3"
     entrypoint: >
       /bin/sh -c "
-      until (/usr/bin/mc alias set minio http://s3:9000 '${AWS_ACCESS_KEY_ID}' '${AWS_SECRET_ACCESS_KEY}') do echo '...waiting...' && sleep 1; done;
+      until (/usr/bin/mc alias set minio ${MLFLOW_SERVER_S3_ENDPOINT_URL} '${AWS_ACCESS_KEY_ID}' '${AWS_SECRET_ACCESS_KEY}') do echo '...waiting...' && sleep 1; done;
       /usr/bin/mc mb minio/${AWS_BUCKET_NAME};
       exit 0;
       "
     networks:
       - internal
+    env_file:
+      - .env
   wait-for-db:
     image: atkrad/wait4x
     depends_on:
       - db
-    command: tcp db:3306 -t 90s -i 250ms
+    command: tcp db:${DB_PORT} -t 90s -i 250ms
     networks:
       - internal
 networks:
